tests/baselines/reference/yieldExpressionInControlFlow.errors.txt
tests/cases/conformance/es6/yieldExpressions/b.ts(2,9): error TS7034: Variable 'o' implicitly has type 'any[]' in some locations where its type cannot be determined.
tests/cases/conformance/es6/yieldExpressions/b.ts(4,20): error TS7005: Variable 'o' implicitly has an 'any[]' type.


==== tests/cases/conformance/es6/yieldExpressions/a.js (0 errors) ====
    function* f() {
        var o
        while (true) {
            o = yield o
        }
    }
    
==== tests/cases/conformance/es6/yieldExpressions/b.ts (2 errors) ====
    function* g() {
        var o = []
            ~
!!! error TS7034: Variable 'o' implicitly has type 'any[]' in some locations where its type cannot be determined.
        while (true) {
            o = yield* o
                       ~
!!! error TS7005: Variable 'o' implicitly has an 'any[]' type.
        }
    }
    